RESOLVED FIXED163629
GetByVal to GetById conversion in the DFG is incorrect for getters with control flow
https://bugs.webkit.org/show_bug.cgi?id=163629
Summary GetByVal to GetById conversion in the DFG is incorrect for getters with contr...
Keith Miller
Reported 2016-10-18 16:23:01 PDT
GetByVal to GetById conversion in the DFG is incorrect for getters with control flow
Attachments
Patch (5.79 KB, patch)
2016-10-18 16:28 PDT, Keith Miller
ysuzuki: review+
Keith Miller
Comment 1 2016-10-18 16:28:35 PDT
Yusuke Suzuki
Comment 2 2016-10-18 16:31:48 PDT
Comment on attachment 291999 [details] Patch Nice. r=me
Keith Miller
Comment 3 2016-10-18 16:37:36 PDT
Radar WebKit Bug Importer
Comment 4 2016-10-18 16:38:41 PDT
Radar WebKit Bug Importer
Comment 5 2016-10-18 16:39:09 PDT
Keith Miller
Comment 6 2016-10-18 16:42:55 PDT
Note You need to log in before you can comment on or make changes to this bug.